Scrollbar in 'messages' div fixed.

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -27,18 +27,23 @@
         margin-bottom: 1.5rem;
     }
 
-    #messages {
+    #wrapper {
         width: 100%;
         max-width: 768px;
         flex: 1;
+        display: flex;
         background-color: #21211f;
         border: 1px solid #dddcdb;
         border-radius: 8px;
-        padding: 1rem;
         margin-top: 1rem;
         margin-bottom: 1rem;
+        overflow-y: hidden;
+    }
+
+    #messages {
         display: flex;
         flex-direction: column;
+        padding: 1rem;
         gap: 1rem;
         overflow-y: auto;
     }
